Fixed sidebar too short problem

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@
   width: 40%;
   padding: 30px;
   transition: width 0.2s;
+  height: 210%;
 }
 
 #cart-display.show .close-sidebar-btn {
